--- a/appLib2.0/src/main/res/layout/crop__activity_crop.xml
+++ b/appLib2.0/src/main/res/layout/crop__activity_crop.xml
@@ -9,7 +9,7 @@
         android:id="@+id/done_cancel_bar"
         layout="@layout/crop__layout_done_cancel" />
 
-    <com.xiay.applib.image.crop.CropImageView
+    <com.xiay.applib.imageselector.crop.CropImageView
         android:id="@+id/crop_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
