--- a/appLib2.0/src/main/res/values/styles.xml
+++ b/appLib2.0/src/main/res/values/styles.xml
@@ -66,4 +66,26 @@
         <item name="android:drawableLeft">@mipmap/crop__ic_cancel</item>
         <item name="android:text">@string/crop__cancel</item>
     </style>
+
+    <style name="MyToolbar" parent="android:Widget">
+        <item name="titleTextAppearance">@style/ToolBarTitle</item>
+        <!--<item name="subtitleTextAppearance">@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle</item>-->
+        <item name="android:minHeight">48dp</item>
+        <item name="titleMargins">4dp</item>
+        <item name="maxButtonHeight">56dp</item>
+        <item name="collapseIcon">?attr/homeAsUpIndicator</item>
+        <!--<item name="collapseContentDescription">@string/abc_toolbar_collapse_description</item>-->
+        <item name="contentInsetStart">16dp</item>
+        <!--<item name="android:paddingLeft">@dimen/abc_action_bar_default_padding_start_material</item>-->
+        <!--<item name="android:paddingRight">@dimen/abc_action_bar_default_padding_end_material</item>-->
+    </style>
+    <style name="ToolBarTitle" parent="android:Widget">
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="WindowStyle">
+        <item name="android:windowEnterAnimation">@anim/image_selector_fade_in</item>
+        <item name="android:windowExitAnimation">@anim/image_selector_fade_out</item>
+    </style>
 </resources>
