--- a/appLib2.0/src/main/res/layout/dialog_msg_one.xml
+++ b/appLib2.0/src/main/res/layout/dialog_msg_one.xml
@@ -22,15 +22,13 @@
          android:background="#7B7B7B"
         />
 
-         <Button
-             android:id="@+id/btn_mid"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:background="@drawable/dialog_mid_btn_selector"
-               android:paddingTop="40px"
-        		android:paddingBottom="40px"
-             android:textColor="#0080FF"
-              android:textSize="42px"
-             android:text="知道了" />
+    <Button
+        android:id="@+id/btn_mid"
+        android:layout_width="match_parent"
+        android:layout_height="150px"
+        android:background="@drawable/dialog_mid_btn_selector"
+        android:textColor="#0080FF"
+         android:textSize="42px"
+        android:text="知道了" />
 
 </LinearLayout>
